# element_challenge

./: Dockerfile  README.md  docker_setup.sh  run_docker.sh
element_ws/install/: local_setup.sh  setup.sh
element_ws/install/moon_sim/share/moon_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
element_ws/install/moon_sim/share/moon_sim/launch/: moon_sim_launch.py
element_ws/log/: latest_build
gazebo/models/apollo15_landing_site_1000x1000/: model-1_4.sdf
gazebo/worlds/: moon.world
